<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_bank_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="start"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_serial_no"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Sr.No"
            android:textColor="@color/Text" />

        <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Name"
            android:textColor="@color/Text" />


        <TextView
            android:id="@+id/txt_load_to"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/load_to"
            android:textColor="@color/Text" />


        <TextView
            android:id="@+id/txt_load_com_name"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/load_com_name"
            android:textColor="@color/Text" />


        <TextView
            android:id="@+id/txt_load_amount"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/load_amount"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text"
            android:visibility="gone"></LinearLayout>


        <TextView
            android:id="@+id/txt_empty_to"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/empty_to"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text"
            android:visibility="gone"></LinearLayout>


        <TextView
            android:id="@+id/txt_empty_com_name"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/empty_com_name"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text"

            android:visibility="gone"></LinearLayout>

        <TextView
            android:id="@+id/txt_empty_amount"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:maxWidth="300dp"
            android:minWidth="100dp"
            android:text="@string/empty_amount"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text"
            android:visibility="gone"></LinearLayout>

        <TextView
            android:id="@+id/txt_profit"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Profit"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text"
            android:visibility="gone"></LinearLayout>


        <TextView
            android:id="@+id/txt_date"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Date"
            android:textColor="@color/Text" />


    </LinearLayout>

</RelativeLayout>
