<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_bank_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/serial_no"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="Sr.No"
            android:textColor="@color/Text" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Name"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text" />


        <TextView
            android:id="@+id/vehicle_no"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/vehicle_no"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text" />


        <TextView
            android:id="@+id/material_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/material_name"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text" />


        <TextView
            android:id="@+id/txt_load"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Load to"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text" />


        <TextView
            android:id="@+id/load_com_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/load_com_name"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text" />


        <TextView
            android:id="@+id/load_amount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/load_amount"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text" />


        <TextView
            android:id="@+id/empty_to"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Empty To"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text" />


        <TextView
            android:id="@+id/empty_com_name"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:text="@string/empty_com_name"
            android:textColor="@color/Text" />


        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text" />


        <TextView
            android:id="@+id/empty_amount"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/empty_amount"
            android:textColor="@color/Text" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/Text" />


        <TextView
            android:id="@+id/date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Date"
            android:textColor="@color/Text" />


    </LinearLayout>

</RelativeLayout>
